# fluid_sim_wearOS_pub

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  config_server.py  create_power_shortcuts.ps1  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/water_slosher_wearos/: FluidSimulationNativeView.kt  MainActivity.kt
configs/: 1_particles.json  1b_particles_static.json  1c_particles_static.json_depricated  2_grid.json  4_particles_grid.json  4b_particles_grid.json  4c_particles_grid.json  5_particles2.json_depricated  5_test_low_res.json
docs_sample/: LLM1stRequest.md  LLM2ndRequest.md  LLM4thRequest.md  LLM5th_geminiProCoderFeedback.md  LLMImplementation1st.md  LLMImplementation2nd.md  apple_watch_porting_assessment.md  flutter_wearos_rotary_touch_input.md  plan_to_investigate_simulation_speed_bottlenecks.md  wearOS_performance_improvement_plan.md  wearOS_simulation_isolate_plan.md  wear_os_porting_plan.md  wear_os_porting_summary.md  wearos_fluid_sim_optimization_plan.md  wearos_flutter_input_guide.md  wearos_porting_plan.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bezel_channel.dart  clock_utils.dart  connect_watch.sh  control_buttons.dart  flip_fluid_simulation.dart  main.dart  models.dart  particle_renderer.dart  pixel_clock_style.dart  sensor_service.dart  simulation_screen.dart  touch_input_handler.dart
lib/txt/: copy_dart_files.sh
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: CMakeLists.txt  simulation_native.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
